--- a/merge_analysis.ipynb
+++ b/merge_analysis.ipynb
@@ -581,97 +581,345 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dataset shape: (10931, 5)\n",
-      "Accuracy: 0.1450\n",
-      "Precision: 1.0000\n",
-      "Recall: 0.1450\n",
-      "F1 Score: 0.2533\n",
-      "\n",
-      "Matches: 1585 out of 10931 (0.1450)\n",
-      "\n",
-      "Human stories (Label_A == 0):\n",
-      "Matches: 0 out of 1547 (0.0000)\n",
-      "\n",
-      "AI-generated content (Label_A == 1):\n",
-      "Matches: 1585 out of 9384 (0.1689)\n"
+      "F1-optimized threshold: 1308.08 (F1=0.3350)\n"
      ]
     }
    ],
    "source": [
     "import pandas as pd\n",
-    "from sklearn.metrics import f1_score, precision_score, recall_score, confusion_matrix, accuracy_score\n",
+    "import numpy as np\n",
+    "from sklearn.metrics import f1_score\n",
     "\n",
-    "# Load the dataset\n",
-    "df = pd.read_csv('results/baseline_benchmark_33_results_merged_with_groundTruth_modified.csv')\n",
+    "# Load the datasets\n",
+    "merged_df = pd.read_csv('results/baseline_benchmark_33_results_merged.csv')\n",
+    "ground_truth_df = pd.read_csv('results/baseline_benchmark_33_results_merged_with_groundTruth_modified.csv')\n",
     "\n",
-    "print(\"Dataset shape:\", df.shape)\n",
+    "# Merge with ground truth to get Label_A\n",
+    "merged_df = pd.merge(merged_df, ground_truth_df[['index', 'Label_A', 'Label_B']], on='index')\n",
     "\n",
-    "# Create a binary classification problem:\n",
-    "# 1 if the predicted model matches the ground truth, 0 otherwise\n",
-    "y_true = [1] * len(df)  # Ideally, all predictions should match ground truth\n",
-    "y_pred = (df['best_LLM_model'] == df['Label_B']).astype(int)\n",
+    "# Extract edit score columns and calculate minimum edit distance\n",
+    "edit_score_columns = [col for col in merged_df.columns if 'Edit Score' in col]\n",
+    "merged_df['min_edit_distance'] = merged_df[edit_score_columns].min(axis=1)\n",
     "\n",
-    "# Calculate metrics\n",
-    "accuracy = accuracy_score(y_true, y_pred)\n",
-    "precision = precision_score(y_true, y_pred)\n",
-    "recall = recall_score(y_true, y_pred)\n",
-    "f1 = f1_score(y_true, y_pred)\n",
+    "# Find optimal threshold using F1 score\n",
+    "thresholds = np.linspace(500, 3000, 100)  # Range covering potential thresholds\n",
+    "best_f1 = 0\n",
+    "best_threshold = 0\n",
     "\n",
-    "# Print results\n",
-    "print(f\"Accuracy: {accuracy:.4f}\")\n",
-    "print(f\"Precision: {precision:.4f}\")\n",
-    "print(f\"Recall: {recall:.4f}\")\n",
-    "print(f\"F1 Score: {f1:.4f}\")\n",
+    "for threshold in thresholds:\n",
+    "    # Predict human if min edit distance > threshold\n",
+    "    predicted_human = (merged_df['min_edit_distance'] > threshold).astype(int)\n",
+    "    true_human = (merged_df['Label_A'] == 0).astype(int)\n",
+    "    \n",
+    "    # Calculate F1 score\n",
+    "    f1 = f1_score(true_human, predicted_human)\n",
+    "    \n",
+    "    if f1 > best_f1:\n",
+    "        best_f1 = f1\n",
+    "        best_threshold = threshold\n",
     "\n",
-    "# Count matches and mismatches\n",
-    "matches = (df['best_LLM_model'] == df['Label_B']).sum()\n",
-    "total = len(df)\n",
-    "print(f\"\\nMatches: {matches} out of {total} ({matches/total:.4f})\")\n",
-    "\n",
-    "# For human stories (Label_A == 0)\n",
-    "human_stories = df[df['Label_A'] == 0]\n",
-    "human_matches = (human_stories['best_LLM_model'] == human_stories['Label_B']).sum()\n",
-    "print(f\"\\nHuman stories (Label_A == 0):\")\n",
-    "print(f\"Matches: {human_matches} out of {len(human_stories)} ({human_matches/len(human_stories):.4f})\")\n",
-    "\n",
-    "# For AI-generated content (Label_A == 1)\n",
-    "ai_content = df[df['Label_A'] == 1]\n",
-    "ai_matches = (ai_content['best_LLM_model'] == ai_content['Label_B']).sum()\n",
-    "print(f\"\\nAI-generated content (Label_A == 1):\")\n",
-    "print(f\"Matches: {ai_matches} out of {len(ai_content)} ({ai_matches/len(ai_content):.4f})\")\n"
+    "print(f\"F1-optimized threshold: {best_threshold:.2f} (F1={best_f1:.4f})\")"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 40,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>index</th>\n",
+       "      <th>Text</th>\n",
+       "      <th>best LLM model</th>\n",
+       "      <th>Qwen Qwen2 72B Instruct Edit Score</th>\n",
+       "      <th>Qwen Qwen2 72B Instruct New Text</th>\n",
+       "      <th>mistralai Mistral 7B Instruct v0.1 Edit Score</th>\n",
+       "      <th>mistralai Mistral 7B Instruct v0.1 New Text</th>\n",
+       "      <th>meta llama Meta Llama 3.1 8B Instruct Turbo Edit Score</th>\n",
+       "      <th>meta llama Meta Llama 3.1 8B Instruct Turbo New Text</th>\n",
+       "      <th>Yi Large Edit Score</th>\n",
+       "      <th>Yi Large New Text</th>\n",
+       "      <th>Gemma 3 27b Edit Score</th>\n",
+       "      <th>Gemma 3 27b New Text</th>\n",
+       "      <th>Label_A</th>\n",
+       "      <th>Label_B</th>\n",
+       "      <th>min_edit_distance</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>10929</th>\n",
+       "      <td>10961</td>\n",
+       "      <td>Error : Error communicating with OpenAI : HTTP...</td>\n",
+       "      <td>mistralai/Mistral-7B-Instruct-v0.1</td>\n",
+       "      <td>260.0</td>\n",
+       "      <td>Regenerated Text: \\n\\nAn error has occurred: T...</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>Error: Error communicating with OpenAI: HTTPS...</td>\n",
+       "      <td>389.0</td>\n",
+       "      <td>Here's the regenerated text with proper format...</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>Error: Error communicating with OpenAI: HTTPSC...</td>\n",
+       "      <td>4104.0</td>\n",
+       "      <td>Okay, here are a few regenerations of the prov...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>GPT_4-o</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10930</th>\n",
+       "      <td>10962</td>\n",
+       "      <td>ensemble cast , especially Ayo Edebiri Jeremy ...</td>\n",
+       "      <td>meta-llama/Meta-Llama-3.1-8B-Instruct-Turbo</td>\n",
+       "      <td>1978.0</td>\n",
+       "      <td>The ensemble cast, notably featuring Ayo Edebi...</td>\n",
+       "      <td>2999.0</td>\n",
+       "      <td>The ensemble cast of the show \"Eyes Wide Shut...</td>\n",
+       "      <td>1010.0</td>\n",
+       "      <td>Here's the regenerated text:\\n\\nThe ensemble c...</td>\n",
+       "      <td>1019.0</td>\n",
+       "      <td>Ensemble cast, especially Ayo Edebiri and Jere...</td>\n",
+       "      <td>3130.0</td>\n",
+       "      <td>## Culture Watch: Five Things I’m Engaging Wit...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>GPT_4-o</td>\n",
+       "      <td>1010.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       index                                               Text  \\\n",
+       "10929  10961  Error : Error communicating with OpenAI : HTTP...   \n",
+       "10930  10962  ensemble cast , especially Ayo Edebiri Jeremy ...   \n",
+       "\n",
+       "                                    best LLM model  \\\n",
+       "10929           mistralai/Mistral-7B-Instruct-v0.1   \n",
+       "10930  meta-llama/Meta-Llama-3.1-8B-Instruct-Turbo   \n",
+       "\n",
+       "       Qwen Qwen2 72B Instruct Edit Score  \\\n",
+       "10929                               260.0   \n",
+       "10930                              1978.0   \n",
+       "\n",
+       "                        Qwen Qwen2 72B Instruct New Text  \\\n",
+       "10929  Regenerated Text: \\n\\nAn error has occurred: T...   \n",
+       "10930  The ensemble cast, notably featuring Ayo Edebi...   \n",
+       "\n",
+       "       mistralai Mistral 7B Instruct v0.1 Edit Score  \\\n",
+       "10929                                            2.0   \n",
+       "10930                                         2999.0   \n",
+       "\n",
+       "             mistralai Mistral 7B Instruct v0.1 New Text  \\\n",
+       "10929   Error: Error communicating with OpenAI: HTTPS...   \n",
+       "10930   The ensemble cast of the show \"Eyes Wide Shut...   \n",
+       "\n",
+       "       meta llama Meta Llama 3.1 8B Instruct Turbo Edit Score  \\\n",
+       "10929                                              389.0        \n",
+       "10930                                             1010.0        \n",
+       "\n",
+       "      meta llama Meta Llama 3.1 8B Instruct Turbo New Text  \\\n",
+       "10929  Here's the regenerated text with proper format...     \n",
+       "10930  Here's the regenerated text:\\n\\nThe ensemble c...     \n",
+       "\n",
+       "       Yi Large Edit Score                                  Yi Large New Text  \\\n",
+       "10929                 18.0  Error: Error communicating with OpenAI: HTTPSC...   \n",
+       "10930               1019.0  Ensemble cast, especially Ayo Edebiri and Jere...   \n",
+       "\n",
+       "       Gemma 3 27b Edit Score  \\\n",
+       "10929                  4104.0   \n",
+       "10930                  3130.0   \n",
+       "\n",
+       "                                    Gemma 3 27b New Text  Label_A  Label_B  \\\n",
+       "10929  Okay, here are a few regenerations of the prov...        1  GPT_4-o   \n",
+       "10930  ## Culture Watch: Five Things I’m Engaging Wit...        1  GPT_4-o   \n",
+       "\n",
+       "       min_edit_distance  \n",
+       "10929                2.0  \n",
+       "10930             1010.0  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "# Results Summary\n",
+    "display(merged_df.tail(2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>index</th>\n",
+       "      <th>Text</th>\n",
+       "      <th>Label_A</th>\n",
+       "      <th>Label_B</th>\n",
+       "      <th>predicted_Label_A</th>\n",
+       "      <th>predicted_Label_B</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>10929</th>\n",
+       "      <td>10961</td>\n",
+       "      <td>Error : Error communicating with OpenAI : HTTP...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>GPT_4-o</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Mistral</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10930</th>\n",
+       "      <td>10962</td>\n",
+       "      <td>ensemble cast , especially Ayo Edebiri Jeremy ...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>GPT_4-o</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Llama</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       index                                               Text  Label_A  \\\n",
+       "10929  10961  Error : Error communicating with OpenAI : HTTP...        1   \n",
+       "10930  10962  ensemble cast , especially Ayo Edebiri Jeremy ...        1   \n",
+       "\n",
+       "       Label_B  predicted_Label_A predicted_Label_B  \n",
+       "10929  GPT_4-o                  1           Mistral  \n",
+       "10930  GPT_4-o                  1             Llama  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# if df['min_edit_distance] > best_threshold then df['best LLM model']= 'Human_story'\n",
+    "merged_df['best LLM model'] = np.where(merged_df['min_edit_distance'] > best_threshold, 'Human_story', merged_df['best LLM model'])\n",
     "\n",
-    "### Overall Results\n",
+    "# create one new column df['predicted_Label_A] >> if df['best LLM model']= 'Human_story', then df['predicted_Label_A'] = 0 else df['predicted_Label_A'] = 1\n",
+    "merged_df['predicted_Label_A'] = np.where(merged_df['best LLM model'] == 'Human_story', 0, 1)\n",
     "\n",
-    "• **F1 Score: 0.2533**\n",
-    "• **Accuracy: 14.50%** (1,585 matches out of 10,931 total samples)\n",
-    "• **Precision: 1.0000** (all positive predictions are correct by definition)\n",
-    "• **Recall: 0.1450** (only 14.50% of samples have matching predictions)\n",
+    "def replace_values(df, column_name, replacements):\n",
+    "    df[column_name] = df[column_name].replace(replacements)\n",
+    "    return df\n",
+    "# Define the replacements for 'Label_B' and 'best LLM model'\n",
+    "replacements = {\n",
+    "    'gemma-2-9b': 'Gemma',\n",
+    "    'Gemma-3-27b': 'Gemma',\n",
+    "    'mistral-7B': 'Mistral',\n",
+    "    'mistralai/Mistral-7B-Instruct-v0.1': 'Mistral',\n",
+    "    'qwen-2-72B': 'Qwen',\n",
+    "    'Qwen/Qwen2-72B-Instruct': 'Qwen',\n",
+    "    'llama-8B': 'Llama',\n",
+    "    'meta-llama/Meta-Llama-3.1-8B-Instruct-Turbo': 'Llama'\n",
+    "}\n",
     "\n",
-    "### Breakdown by Content Type\n",
+    "# Replace values in 'Label_B' and 'best LLM model' columns\n",
+    "merged_df = replace_values(merged_df, 'Label_B', replacements)\n",
+    "merged_df = replace_values(merged_df, 'best LLM model', replacements)\n",
+    "# rename column 'best LLM model' as 'best_LLM_model'\n",
+    "merged_df.rename(columns={'best LLM model': 'predicted_Label_B'}, inplace=True)\n",
     "\n",
-    "1. Human Stories (Label_A == 0):\n",
-    "   • **Matches: 0 out of 1,547 (0.00%)**\n",
-    "   • This makes sense because best_LLM_model doesn't have a \"Human_story\" option, so it can never \n",
-    "match with human-written content.\n",
+    "# remove unnecssary columns from the DataFrame and keep only the relevant ones [index,\tText,\tLabel_A,\tLabel_B, predicted_Label_A, predicted_Label_B]\n",
+    "merged_df = merged_df[['index', 'Text', 'Label_A', 'Label_B', 'predicted_Label_A', 'predicted_Label_B']]\n",
+    "# save the modified DataFrame to a new CSV file\n",
+    "merged_df.to_csv('results/baseline_benchmark_33_results_merged_with_groundTruth_modified_final.csv', index=False)\n",
+    "# display the modified DataFrame\n",
+    "display(merged_df.tail(2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "F1 Score for Label_A: 0.9232\n",
+      "F1 Score for Label_B (macro): 0.1277\n",
+      "F1 Score for Label_B (weighted): 0.1275\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import f1_score\n",
     "\n",
-    "2. AI-Generated Content (Label_A == 1):\n",
-    "   • **Matches: 1,585 out of 9,384 (16.89%)**\n",
-    "   • This means that in only about 17% of cases, the system correctly identified which LLM generated \n",
-    "the content."
+    "def calculate_f1_score(df, true_label_col, predicted_label_col, is_multiclass=False):\n",
+    "    if is_multiclass:\n",
+    "        # For multi-class problems, we need to specify average method\n",
+    "        # 'macro' gives equal weight to each class\n",
+    "        # 'weighted' accounts for class imbalance\n",
+    "        return f1_score(df[true_label_col], df[predicted_label_col], average='macro'), \\\n",
+    "               f1_score(df[true_label_col], df[predicted_label_col], average='weighted')\n",
+    "    else:\n",
+    "        # For binary classification\n",
+    "        return f1_score(df[true_label_col], df[predicted_label_col])\n",
+    "\n",
+    "# Calculate F1 scores\n",
+    "f1_score_Label_A = calculate_f1_score(merged_df, 'Label_A', 'predicted_Label_A')\n",
+    "\n",
+    "# For multi-class Label_B\n",
+    "f1_score_Label_B_macro, f1_score_Label_B_weighted = calculate_f1_score(\n",
+    "    merged_df, 'Label_B', 'predicted_Label_B', is_multiclass=True)\n",
+    "\n",
+    "# Display F1 scores\n",
+    "print(f\"F1 Score for Label_A: {f1_score_Label_A:.4f}\")\n",
+    "print(f\"F1 Score for Label_B (macro): {f1_score_Label_B_macro:.4f}\")\n",
+    "print(f\"F1 Score for Label_B (weighted): {f1_score_Label_B_weighted:.4f}\")"
    ]
   },
   {
